--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="author" content="Aurélien Sallin">
 <meta name="dcterms.date" content="2025-10-20">
 
-<title>The Impact of Choosing Wisely™ Recommendations and Insurance Coverage Restrictions on Low-Value Care: An Interrupted Time Series Analysis of Vitamin D Tests</title>
+<title>Guidelines vs.&nbsp;Financial Incentives: Which Policy Tool Actually Changes Physician Behavior?</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -77,20 +77,21 @@ div.csl-indent {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-background-color-sidebar: #F5F5F5;
---cr-narrative-text-color-overlay: #e2e2e2;
---cr-section-background-color: #F5F5F5;
---cr-narrative-background-color-overlay: rgb(0,43,54,0.75);
---cr-narrative-overlay-max-width: 700px;
+          --cr-narrative-overlay-max-width: 700px;
 --cr-narrative-text-color-sidebar: #333333;
+--cr-narrative-background-color-sidebar: #F5F5F5;
+--cr-narrative-background-color-overlay: rgb(0,43,54,0.75);
+--cr-section-background-color: #F5F5F5;
 --cr-narrative-font-size: 1.4rem;
+--cr-narrative-text-color-overlay: #e2e2e2;
         }
       </style>
     
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">The Impact of Choosing Wisely™ Recommendations and Insurance Coverage Restrictions on Low-Value Care: An Interrupted Time Series Analysis of Vitamin D Tests</h1>
+<h1 class="title">Guidelines vs.&nbsp;Financial Incentives: Which Policy Tool Actually Changes Physician Behavior?</h1>
+<p class="subtitle lead">Lessons from Switzerland’s Vitamin D case</p>
 </div>
 
 
@@ -121,11 +122,11 @@ div.csl-indent {
 
 <hr>
 <div class="banner">
-<p><img src="img/vitd-banner.jpg" class="banner-image img-fluid"></p>
-<section id="swiss-healthcare-policy-in-action" class="level1 banner-overlay">
-<h1>Swiss Healthcare Policy in Action</h1>
-<section id="tracking-the-impact-of-evidence-based-interventions-on-low-value-care" class="level2">
-<h2 class="anchored" data-anchor-id="tracking-the-impact-of-evidence-based-interventions-on-low-value-care">Tracking the Impact of Evidence-Based Interventions on Low-Value Care</h2>
+<p><img src="img/Vitamin-D.jpg" class="banner-image img-fluid"></p>
+<section id="the-impact-of-choosing-wisely-recommendations-and-insurance-coverage-restrictions-on-low-value-care" class="level1 banner-overlay">
+<h1>The Impact of Choosing Wisely™ Recommendations and Insurance Coverage Restrictions on Low-Value Care</h1>
+<section id="an-interrupted-time-series-analysis-of-vitamin-d-tests" class="level2">
+<h2 class="anchored" data-anchor-id="an-interrupted-time-series-analysis-of-vitamin-d-tests">An Interrupted Time Series Analysis of Vitamin D Tests</h2>
 </section>
 </section>
 </div>
@@ -150,7 +151,7 @@ div.csl-indent {
 <h2 class="anchored" data-anchor-id="a-multi-disciplinary-collaboration">A Multi-Disciplinary Collaboration</h2>
 <p>This study is the result of a productive collaboration between the health services research team at SWICA, physicians at the Institute of Primary Care of the University of Zürich, and health economists at the Institute of Health Economics and Health Policy of the Bern University of Applied Sciences.</p>
 <p>This collaboration demonstrates how insights from claims data can advance our understanding of the healthcare system and inform policy decisions aimed at reducing costs for the Swiss population.</p>
-<p>This research has been published in BMC Health Services Research <span class="citation" data-cites="sallin2025impact">(<a href="#ref-sallin2025impact" role="doc-biblioref">Sallin et al. 2025</a>)</span>.</p>
+<p>This research has been published in BMC Health Services Research and is available here 👉<span class="citation" data-cites="sallin2025impact">(<a href="#ref-sallin2025impact" role="doc-biblioref">Sallin et al. 2025</a>)</span>.</p>
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
 <div class="trigger new-trigger" data-focus-on="cr-plot-layout-I">
@@ -188,7 +189,7 @@ div.csl-indent {
 <section id="the-numbers-clinical-recommendations-work-but-modestly" class="level4 narrative">
 <h4 class="anchored" data-anchor-id="the-numbers-clinical-recommendations-work-but-modestly">The Numbers: Clinical Recommendations Work, But Modestly</h4>
 <p>Statistical analysis confirms a <strong>4.9% reduction</strong> in testing rates [95% CI: -5.3%, -4.5%].</p>
-<p>We conduct statistical tests to see whether the recommendation led to a recognizable pattern. <strong>We find The number of tests per consultation falls by 4.9% [-5.3%, -4.5%] after the recommendation.</strong></p>
+<p>We conduct statistical tests to see whether the recommendation led to a recognizable pattern. <strong>The number of tests per consultation falls by 4.9% [-5.3%, -4.5%] after the recommendation.</strong></p>
 </section>
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-plot-layout-5">
@@ -203,7 +204,7 @@ div.csl-indent {
 <div class="trigger new-trigger" data-focus-on="cr-plot-layout-6">
 <section id="financial-incentives-the-game-changer" class="level4 narrative">
 <h4 class="anchored" data-anchor-id="financial-incentives-the-game-changer">Financial Incentives: The Game Changer</h4>
-<p>Coverage restrictions deliver a <strong>62% reduction</strong> in testing rates—a dramatic drop compared to clinical recommendations alone.</p>
+<p>Coverage restrictions deliver a <strong>62% reduction</strong> in testing rates. This is a dramatic drop compared to clinical recommendations alone.</p>
 <p>The number of tests per consultation falls by 62% [-62.4%, -61.6%] The 6-month cumulated effect is -60% [-60.0%, 59.0%].</p>
 </section>
 </div>
