remove slide number

--- a/index.html
+++ b/index.html
@@ -637,11 +637,11 @@ Smarter Medicine recommendation shows a slight downward trend</p>
 <p><br>
 </p>
 <ul>
-<li class="fragment"><strong>Multi-disciplinary team:</strong>
+<li><strong>Multi-disciplinary team:</strong>
 <ul>
-<li class="fragment">Health services research, SWICA</li>
-<li class="fragment">Institute of Primary Care, University of Zürich</li>
-<li class="fragment">Institute of Health Economics and Health Policy, Bern University of Applied Sciences</li>
+<li>Health services research, SWICA</li>
+<li>Institute of Primary Care, University of Zürich</li>
+<li>Institute of Health Economics and Health Policy, Bern University of Applied Sciences</li>
 </ul></li>
 </ul>
 </div><div class="column" style="width:40%;">
@@ -764,7 +764,7 @@ Sallin, Aurélien, Daniel Ammann, Caroline Bähler, Tobias Müller, Stefan Neune
         progress: true,
 
         // Display the page number of the current slide
-        slideNumber: 'c/t',
+        slideNumber: false,
 
         // 'all', 'print', or 'speaker'
         showSlideNumber: 'all',
